<resources>
    <string name="app_name">Budget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="permission_rationale_storage">You need to allow access to storage in order to create a backup database.</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="permission_denied_message">Are you sure you want to deny this permission?</string>
    <string name="permission_retry">Re-try</string>
    <string name="permission_deny">Deny</string>
    <string name="permission_rationale_write_backup_data">Without this permission the app is unable to create a backup data</string>
    <string name="permission_rationale_read_backup_data">Without this permission the app is unable to restore the backup data</string>
    <string name="permission_rationale_access_data">Without this permission the app is unable to access the data file</string>
    <string name="permission_rationale_write_csv">Without this permission the app is unable to create the CSV</string>
    <string name="title_activity_transaction_info">Transaction</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_category_info">CategoryInfo</string>
    <string name="title_activity_transactions_for_category">TransactionsForCategory</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="title_activity_pdf">PdfActivity</string>
    <string name="title_activity_tour">Tour</string>
    <string name="title_activity_settings_account">Accounts</string>
    <string name="title_activity_settings_category">Categories</string>
    <string name="title_activity_settings_location">Locations</string>
    <string name="title_activity_transactions_for_location">TransactionsForLocation</string>
    <string name="title_activity_open_source">OpenSourceActivity</string>
    <string name="title_activity_account_info">AccountInfoActivity</string>
    <string name="title_activity_transactions_for_account">TransactionsForAccount</string>
    <string name="title_activity_location_info">LocationInfoActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_translation">TranslationActivity</string>
    <string name="title_activity_developer">DeveloperActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_privacy_policy">PrivacyPolicy</string>
    <string name="tutorial_title_1">Calendar</string>
    <string name="tutorial_title_2">Theme</string>
    <string name="tutorial_title_3">Approve</string>
    <string name="tutorial_title_4">Add new Transaction</string>
    <string name="tutorial_title_5">Budget</string>
    <string name="tutorial_title_6">Account</string>
    <string name="tutorial_title_7">Location</string>
    <string name="tutorial_title_8">Monthly Overview</string>
    <string name="tutorial_title_9">Percentage</string>
    <string name="tutorial_description_1">View all transactions for a specific date</string>
    <string name="tutorial_description_2">Change between light and dark mode</string>
    <string name="tutorial_description_3">Approve, un-approve, or delete a transaction by swiping left</string>
    <string name="tutorial_description_4">Input amount and select category, account, notes, location, etc</string>
    <string name="tutorial_description_5">Compare your current spending with your budget</string>
    <string name="tutorial_description_6">View how much you spent on all accounts</string>
    <string name="tutorial_description_7">Enter and track location for your purchases</string>
    <string name="tutorial_description_8">View how much you spent and earn each month</string>
    <string name="tutorial_description_9">See what you are spending the most on</string>
    <string name="warning_delete_transaction">Delete this transaction?</string>
    <string name="warning_delete_category">All transactions with this category will no longer have this category associated to it once deleted</string>
    <string name="warning_delete_account">All transactions with this account will no longer have this account associated to it once deleted</string>
    <string name="empty_transaction_custom_date" formatted="false">There is no transaction for \'%s\' during %s</string>
    <string name="setting_header_general">General</string>
    <string name="setting_header_data">Data</string>
    <string name="setting_header_feedback">Feedback</string>
    <string name="setting_title_theme">Current Theme</string>
    <string name="setting_title_day">First day of the week</string>
    <string name="setting_title_category">Categories</string>
    <string name="setting_content_category">Manage categories. Change icon, color, and others</string>
    <string name="setting_title_account">Accounts</string>
    <string name="setting_content_account">Manage accounts. Change icons and others</string>
    <string name="setting_title_location">Locations</string>
    <string name="setting_content_location">Manage Locations. Change colors</string>
    <string name="setting_title_backup_data">Backup data</string>
    <string name="setting_content_backup_data" formatted="false">last backup : %s</string>
    <string name="setting_title_restore_data">Restore data</string>
    <string name="setting_title_reset_data">Reset data</string>
    <string name="setting_title_export_data">Export data to CSV</string>
    <string name="setting_title_email">Email me</string>
    <string name="setting_content_email">feedback for the app</string>
    <string name="setting_title_tour">Tour</string>
    <string name="setting_title_faq">FAQ</string>
    <string name="setting_title_open_source">Open Source Licenses</string>
    <string name="setting_content_open_source">License details for open source software used</string>
    <string name="num_pad_1">1</string>
    <string name="num_pad_2">2</string>
    <string name="num_pad_3">3</string>
    <string name="num_pad_4">4</string>
    <string name="num_pad_5">5</string>
    <string name="num_pad_6">6</string>
    <string name="num_pad_7">7</string>
    <string name="num_pad_8">8</string>
    <string name="num_pad_9">9</string>
    <string name="num_pad_0">0</string>
    <string name="middle_section_name">Name</string>
    <string name="middle_section_right">Right</string>
    <string name="privacy_main_title">Privacy Policy</string>
    <string name="privacy_main_content">Zhan H. Yap built the Budget app as a Free app. This SERVICE is provided by Zhan H. Yap at no cost and is intended for use as is.
		\n\nThis page is used to inform website visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
		\n\nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
		\n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Budget unless otherwise defined in this Privacy Policy.</string>
    <string name="privacy_collection_title">Information Collection and Use</string>
    <string name="privacy_collection_content">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request is retained on your device and is not collected by me in any way
		\n\nThe app does use third party services that may collect information used to identify you.</string>
    <string name="privacy_log_title">Log Data</string>
    <string name="privacy_log_content">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="privacy_cookies_title">Cookies</string>
    <string name="privacy_cookies_content">Cookies are files with small amount of data that is commonly used an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your device internal memory.
		\n\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collection information and to improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="privacy_service_title">Service Providers</string>
    <string name="privacy_service_content">I may employ third-party companies and individuals due to the following reasons:
		\n\n1)To facilitate our Service;
		\n2)To provide the Service on our behalf;
		\n3)To perform Service-related services; or
		\n4)To assist us in analyzing how our Service is used.
		\n\nI want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="privacy_security_title">Security</string>
    <string name="privacy_security_content">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</string>
    <string name="privacy_other_sites_title">Links to Other Sites</string>
    <string name="privacy_other_sites_content">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="privacy_children_title">Children’s Privacy</string>
    <string name="privacy_children_content">These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</string>
    <string name="privacy_changes_title">Changes to This Privacy Policy</string>
    <string name="privacy_changes_content">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</string>
    <string name="privacy_contact_title">Contact Us</string>
    <string name="privacy_contact_content">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.</string>
    <string name="privacy_last_updated_date" formatted="false">Updated : %s</string>
</resources>