<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button style="@style/NumberPadStyle"
            android:id="@+id/number1"
            android:text="@string/num_pad_1"/>

        <Button style="@style/NumberPadStyle"
            android:id="@+id/number2"
            android:text="@string/num_pad_2"/>

        <Button style="@style/NumberPadStyle"
            android:id="@+id/number3"
            android:text="@string/num_pad_3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button style="@style/NumberPadStyle"
            android:id="@+id/number4"
            android:text="@string/num_pad_4"/>

        <Button style="@style/NumberPadStyle"
            android:id="@+id/number5"
            android:text="@string/num_pad_5"/>

        <Button style="@style/NumberPadStyle"
            android:id="@+id/number6"
            android:text="@string/num_pad_6"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button style="@style/NumberPadStyle"
            android:id="@+id/number7"
            android:text="@string/num_pad_7"/>

        <Button style="@style/NumberPadStyle"
            android:id="@+id/number8"
            android:text="@string/num_pad_8"/>

        <Button style="@style/NumberPadStyle"
            android:id="@+id/number9"
            android:text="@string/num_pad_9"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View style="@style/NumberPadStyle" />

        <Button style="@style/NumberPadStyle"
            android:id="@+id/number0"
            android:text="@string/num_pad_0"/>

        <ImageButton style="@style/NumberPadStyle"
            android:id="@+id/numberX"
            android:src="@drawable/svg_ic_backspace"
            android:tint="?attr/themeColorText"/>
    </LinearLayout>

</LinearLayout>