<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="com.zhan.budget.Activity.Settings.Info.PrivacyPolicyActivity"
	tools:showIn="@layout/activity_privacy_policy">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingTop="@dimen/item_top_padding"
			android:paddingBottom="@dimen/item_bottom_padding"
			android:paddingRight="@dimen/item_right_padding"
			android:paddingEnd="@dimen/item_right_padding">

			<!-- Privacy Policy  -->
			<TextView style="@style/SettingsTextViewTitleStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:textColor="@color/colorPrimary"
			          android:layout_marginTop="@dimen/item_padding"
			          android:text="@string/privacy_main_title"/>

			<!-- Main Content -->
			<TextView style="@style/SettingsTextViewContentStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/privacy_main_content"/>

			<!-- Information Collection and Use  -->
			<TextView style="@style/SettingsTextViewTitleStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/colorPrimary"
					android:layout_marginTop="@dimen/item_padding"
					android:text="@string/privacy_collection_title"/>

			<TextView style="@style/SettingsTextViewContentStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/privacy_collection_content"/>

			<!-- Log Data -->
			<TextView style="@style/SettingsTextViewTitleStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:textColor="@color/colorPrimary"
			          android:layout_marginTop="@dimen/item_padding"
			          android:text="@string/privacy_log_title"/>

			<TextView style="@style/SettingsTextViewContentStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:text="@string/privacy_log_content"/>

			<!-- Cookies -->
			<TextView style="@style/SettingsTextViewTitleStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:textColor="@color/colorPrimary"
			          android:layout_marginTop="@dimen/item_padding"
			          android:text="@string/privacy_cookies_title"/>

			<TextView style="@style/SettingsTextViewContentStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:text="@string/privacy_cookies_content"/>

			<!-- Service Providers -->
			<TextView style="@style/SettingsTextViewTitleStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:textColor="@color/colorPrimary"
			          android:layout_marginTop="@dimen/item_padding"
			          android:text="@string/privacy_service_title"/>

			<TextView style="@style/SettingsTextViewContentStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:text="@string/privacy_service_content"/>

			<!-- Security -->
			<TextView style="@style/SettingsTextViewTitleStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:textColor="@color/colorPrimary"
			          android:layout_marginTop="@dimen/item_padding"
			          android:text="@string/privacy_security_title"/>

			<TextView style="@style/SettingsTextViewContentStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:text="@string/privacy_security_content"/>

			<!-- Links to Other Sites -->
			<TextView style="@style/SettingsTextViewTitleStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:textColor="@color/colorPrimary"
			          android:layout_marginTop="@dimen/item_padding"
			          android:text="@string/privacy_other_sites_title"/>

			<TextView style="@style/SettingsTextViewContentStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:text="@string/privacy_other_sites_content"/>

			<!-- Children's Privacy -->
			<TextView style="@style/SettingsTextViewTitleStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:textColor="@color/colorPrimary"
			          android:layout_marginTop="@dimen/item_padding"
			          android:text="@string/privacy_children_title"/>

			<TextView style="@style/SettingsTextViewContentStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:text="@string/privacy_children_content"/>

			<!-- Changes to This Privacy Policy -->
			<TextView style="@style/SettingsTextViewTitleStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:textColor="@color/colorPrimary"
			          android:layout_marginTop="@dimen/item_padding"
			          android:text="@string/privacy_changes_title"/>

			<TextView style="@style/SettingsTextViewContentStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:text="@string/privacy_changes_content"/>

			<!-- Contact Us -->
			<TextView style="@style/SettingsTextViewTitleStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:textColor="@color/colorPrimary"
			          android:layout_marginTop="@dimen/item_padding"
			          android:text="@string/privacy_contact_title"/>

			<TextView style="@style/SettingsTextViewContentStyle"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:text="@string/privacy_contact_content"/>

			<TextView
				android:id="@+id/privacyDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:layout_marginTop="20dp"
				android:text="@string/privacy_last_updated_date"/>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>

