<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhan.budget.Fragment.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_padding"
        android:orientation="vertical">

        <TextView style="@style/SettingsTextViewHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_header_general" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:id="@+id/themeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/themeColorBtn"
            android:clickable="true"
            android:focusable="true">

            <TextView style="@style/SettingsTextViewButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_title_theme"/>

            <TextView style="@style/SettingsTextViewContentStyle"
                android:id="@+id/themeContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="day mode"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/themeColorHighlight"/>

        <LinearLayout
            android:id="@+id/firstDayBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/themeColorBtn"
            android:clickable="true"
            android:focusable="true">

            <TextView style="@style/SettingsTextViewButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_title_day"/>

            <TextView style="@style/SettingsTextViewContentStyle"
                android:id="@+id/firstDayContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="sunday"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/themeColorHighlight"/>

        <LinearLayout
            android:id="@+id/categoryOrderBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/themeColorBtn"
            android:clickable="true"
            android:focusable="true">

            <TextView style="@style/SettingsTextViewButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_title_category"/>

            <TextView style="@style/SettingsTextViewContentStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_content_category"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/themeColorHighlight"/>

        <LinearLayout
            android:id="@+id/defaultAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/themeColorBtn"
            android:clickable="true"
            android:focusable="true">

            <TextView style="@style/SettingsTextViewButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_title_account"/>

            <TextView style="@style/SettingsTextViewContentStyle"
                android:id="@+id/defaultAccountContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_content_account"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/themeColorHighlight"/>

        <LinearLayout
            android:id="@+id/locationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/themeColorBtn"
            android:clickable="true"
            android:focusable="true">

            <TextView style="@style/SettingsTextViewButtonStyle"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/setting_title_location"/>

            <TextView style="@style/SettingsTextViewContentStyle"
                      android:id="@+id/locationContent"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/setting_content_location"/>
        </LinearLayout>

        <TextView style="@style/SettingsTextViewHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_header_data"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:id="@+id/backupBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/themeColorBtn"
            android:clickable="true"
            android:focusable="true">

            <TextView style="@style/SettingsTextViewButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_title_backup_data"/>

            <TextView style="@style/SettingsTextViewContentStyle"
                android:id="@+id/backupContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_content_backup_data"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/themeColorHighlight"/>

        <TextView style="@style/SettingsTextViewButtonStyle"
            android:id="@+id/restoreBackupBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/setting_title_restore_data"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/themeColorHighlight"/>

        <TextView style="@style/SettingsTextViewButtonStyle"
            android:id="@+id/resetDataBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/setting_title_reset_data"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/themeColorHighlight"/>

        <TextView style="@style/SettingsTextViewButtonStyle"
            android:id="@+id/exportCSVBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/setting_title_export_data"/>

        <TextView style="@style/SettingsTextViewHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_header_feedback"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"/>
<!--
        <TextView style="@style/SettingsTextViewButtonStyle"
            android:id="@+id/emailBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="Email me"/>
-->
        <LinearLayout
            android:id="@+id/emailBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/themeColorBtn"
            android:clickable="true"
            android:focusable="true">

            <TextView style="@style/SettingsTextViewButtonStyle"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/setting_title_email"/>

            <TextView style="@style/SettingsTextViewContentStyle"
                      android:id="@+id/emailContent"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/setting_content_email"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/themeColorHighlight"/>

        <TextView style="@style/SettingsTextViewButtonStyle"
            android:id="@+id/tourBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/setting_title_tour"/>

        <!-- remove for now in v1.0.0 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            android:background="?attr/themeColorHighlight"/>

        <!-- remove for now in v1.0.0 -->
        <TextView style="@style/SettingsTextViewButtonStyle"
            android:id="@+id/faqBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:background="?attr/themeColorBtn"
            android:visibility="gone"
            android:text="@string/setting_title_faq"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/themeColorHighlight"/>

        <LinearLayout
            android:id="@+id/openSourceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/themeColorBtn"
            android:clickable="true"
            android:focusable="true">

            <TextView style="@style/SettingsTextViewButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_title_open_source"/>

            <TextView style="@style/SettingsTextViewContentStyle"
                android:id="@+id/openSourceContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_content_open_source"/>
        </LinearLayout>

        <TextView
            android:id="@+id/appVersionTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/version_number"
            android:paddingBottom="10dp"
            android:layout_margin="10dp"
            android:gravity="center_horizontal" />
    </LinearLayout>
</ScrollView>