<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/themeColorHighlight"
        android:paddingLeft="@dimen/item_padding"
        android:paddingRight="@dimen/item_padding"
        android:paddingTop="@dimen/item_static_padding"
        android:paddingBottom="@dimen/item_static_padding">

        <TextView
            android:id="@+id/genericName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle_section_name"
            android:textSize="@dimen/text_title_size" />

        <TextView
            android:id="@+id/transactionBalance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/middle_section_right"
            android:textSize="@dimen/text_title_size"
            android:gravity="end" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/transactionListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topPanel"/>

    <TextView
        android:id="@+id/emptyTransactionTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topPanel"
        android:paddingLeft="@dimen/item_padding"
        android:paddingRight="@dimen/item_padding"
        android:text="@string/empty_transaction_custom_date"
        android:gravity="center_vertical|center_horizontal" />
</RelativeLayout>
